--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
     <header>
         <p>Twitter</p>
     </header>
-
     <section>
-
-
     <div class="content-div">
       <h2>Reto de Codigo</h2>
       <p>Hola, <br> soy fond-end developer jr. </p>
@@ -25,20 +22,17 @@
 
     <div class="content-form">
       <form>
-      <textarea placeholder="" class="text-content"name="name" rows="4" cols="80"></textarea>
+    <textarea  rows="4" cols="50" name="texto" onKeyDown="cuenta()" onKeyUp="cuenta()"></textarea>
         <br>
       </form>
-      <div class="">
+      <div class="cont-number">
         <input type="submit" value="TWEET">
-        <div class="contador">
-              140
-        </div>
-      </div>
+      <input type="text" name=caracteres size=4>
 
+      </div>
     </div>
 
   </section>
-
 <script type="text/javascript" src="app.js">
 
 </script>
