--- a/index.html
+++ b/index.html
@@ -3,38 +3,34 @@
   <head>
     <meta charset="utf-8">
     <title>Reto Twitter</title>
+    <link font-family: 'Barlow', sans-serif;
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <header>
         <p>Twitter</p>
     </header>
-    <section>
-    <div class="content-div">
-      <h2>Reto de Codigo</h2>
-      <p>Hola, <br> soy fond-end developer jr. </p>
-      <hr>
-      <div class="">
-        CODIGO
-      </div>
+        <section>
+            <div class="content-div">
+                  <h2>Reto de Codigo</h2>
+                  <p>Hola, <br> soy fond-end developer jr. </p>
+                  <hr>
+                  <p>  CODIGO</p>
+            </div>
 
-    </div>
+            <div class="content-form">
+                  <textarea  name="insert-text" id="insert-text" placeholder="Agrega tu link"></textarea>
+                  <br>
+                  <button id="save" class="btn"> TWEET</button>
+            </div>
+        </section>
+        <main>
+          <div id="container">
 
-    <div class="content-form">
-      <form>
-    <textarea  rows="4" cols="50" name="texto" onKeyDown="cuenta()" onKeyUp="cuenta()"></textarea>
-        <br>
-      </form>
-      <div class="cont-number">
-        <input type="submit" value="TWEET">
-      <input type="text" name=caracteres size=4>
+          </div>
+        </main>
 
-      </div>
-    </div>
-
-  </section>
 <script type="text/javascript" src="app.js">
-
 </script>
   </body>
 </html>
