--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <div class="content-form">
                   <textarea  name="insert-text" id="insert-text" placeholder="Agrega tu link"></textarea>
                   <br>
-                  <button id="save" class="btn"> TWEET</button>
+                  <button id="save" > TWEET</button>
             </div>
         </section>
         <main>
-          <div id="container">
+          <div id="container" >
 
           </div>
         </main>
