--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             <div class="content-form">
                   <textarea  name="insert-text" id="insert-text" placeholder="Agrega tu link"></textarea>
                   <br>
-                  <button id="save" > TWEET</button>
+                  <button id="save"  class="btn" > TWEET</button>
+                <!--<div id="number-cont"> 140</div>:  -->
+                  <input  id="number-cont"type="text" name="caracteres" value="">
             </div>
         </section>
         <main>
