añadiendo la version 0.3

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
             <div class="content-form">
                   <textarea  name="insert-text" id="insert-text" placeholder="Agrega tu link"></textarea>
                   <br>
-                  <button id="save"  class="btn" > TWEET</button>
-                <!--<div id="number-cont"> 140</div>:  -->
+<!-- <button id="save"  class="btn" > TWEET</button>:  -->
+                
+
+                  <input id="save" class="btn" type="submit" value="TWEET">
+
                   <input  id="number-cont"type="text" name="caracteres" value="">
             </div>
         </section>
